<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:padding="@dimen/layout_margin5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/texto_small"
        android:text="@string/cumplimiento_titulo"
        android:textColor="@color/icons"
        android:background="@color/colorPrimaryDark"/>
    <TextView
        android:paddingLeft="@dimen/layout_margin5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_bar"
        android:textSize="@dimen/texto_small"
        android:background="@color/colorPrimaryLight"
        android:text="@string/cumplimiento_pregunta1"/>
    <RadioGroup
        android:id="@+id/rg_cumplimiento_p1"
        android:paddingLeft="@dimen/layout_margin5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RadioButton
            android:id="@+id/rb_cumplimiento_p1_025"
            android:text="@string/puntaje025"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin5dp"/>
        <RadioButton
            android:id="@+id/rb_cumplimiento_p1_050"
            android:text="@string/puntaje050"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin5dp"/>
        <RadioButton
            android:id="@+id/rb_cumplimiento_p1_075"
            android:text="@string/puntaje075"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin5dp"/>
        <RadioButton
            android:id="@+id/rb_cumplimiento_p1_100"
            android:text="@string/puntaje100"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin5dp"/>
    </RadioGroup>
</LinearLayout>