<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:padding="@dimen/layout_margin5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/texto_small"
        android:text="@string/conocimiento_titulo"
        android:textColor="@color/icons"
        android:background="@color/colorPrimaryDark"/>
    <TextView
        android:paddingLeft="@dimen/layout_margin5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_bar"
        android:textSize="@dimen/texto_small"
        android:background="@color/colorPrimaryLight"
        android:text="@string/conocimiento_pregunta1"/>
    <RadioGroup
        android:id="@+id/rg_conocimiento_p1"
        android:paddingLeft="@dimen/layout_margin5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_conocimiento_p1_025"
            android:text="@string/puntaje025"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin5dp"/>
        <RadioButton
            android:id="@+id/rb_conocimiento_p1_050"
            android:text="@string/puntaje050"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin5dp"/>
        <RadioButton
            android:id="@+id/rb_conocimiento_p1_075"
            android:text="@string/puntaje075"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin5dp"/>
        <RadioButton
            android:id="@+id/rb_conocimiento_p1_100"
            android:text="@string/puntaje100"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin5dp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:paddingLeft="@dimen/layout_margin5dp"
        android:text="@string/conocimiento_pregunta2"
        android:textColor="@color/color_bar"
        android:textSize="@dimen/texto_small" />

    <RadioGroup
        android:id="@+id/rg_conocimiento_p2"
        android:paddingLeft="@dimen/layout_margin5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_conocimiento_p2_025"
            android:text="@string/puntaje025"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin5dp"/>
        <RadioButton
            android:id="@+id/rb_conocimiento_p2_050"
            android:text="@string/puntaje050"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin5dp"/>
        <RadioButton
            android:id="@+id/rb_conocimiento_p2_075"
            android:text="@string/puntaje075"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin5dp"/>
        <RadioButton
            android:id="@+id/rb_conocimiento_p2_100"
            android:text="@string/puntaje100"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin5dp"/>
    </RadioGroup>
    <TextView
        android:paddingLeft="@dimen/layout_margin5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/texto_small"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/color_bar"
        android:text="@string/conocimiento_pregunta3"/>
    <RadioGroup
        android:id="@+id/rg_conocimiento_p3"
        android:paddingLeft="@dimen/layout_margin5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_conocimiento_p3_025"
            android:text="@string/puntaje025"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin5dp"/>
        <RadioButton
            android:id="@+id/rb_conocimiento_p3_050"
            android:text="@string/puntaje050"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin5dp"/>
        <RadioButton
            android:id="@+id/rb_conocimiento_p3_075"
            android:text="@string/puntaje075"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin5dp"/>
        <RadioButton
            android:id="@+id/rb_conocimiento_p3_100"
            android:text="@string/puntaje100"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin5dp"/>
    </RadioGroup>
    <TextView
        android:paddingLeft="@dimen/layout_margin5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/texto_small"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/color_bar"
        android:text="@string/conocimiento_pregunta4"/>
    <RadioGroup
        android:id="@+id/rg_conocimiento_p4"
        android:paddingLeft="@dimen/layout_margin5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_conocimiento_p4_025"
            android:text="@string/puntaje025"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin5dp"/>
        <RadioButton
            android:id="@+id/rb_conocimiento_p4_050"
            android:text="@string/puntaje050"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin5dp"/>
        <RadioButton
            android:id="@+id/rb_conocimiento_p4_075"
            android:text="@string/puntaje075"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin5dp"/>
        <RadioButton
            android:id="@+id/rb_conocimiento_p4_100"
            android:text="@string/puntaje100"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_margin5dp"/>
    </RadioGroup>
</LinearLayout>