<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fisi.unmsm.sistemaencuestaestudiantil.fragments.ProfesorFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/layout_margin10dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_rojo"
            android:padding="@dimen/layout_margin5dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/layout_margin5dp"
                android:paddingBottom="@dimen/layout_margin5dp"
                android:paddingLeft="@dimen/layout_margin5dp"
                android:paddingRight="@dimen/layout_margin5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Profesor:"
                    android:layout_marginRight="@dimen/layout_margin5dp"/>
                <LinearLayout
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borde_spinner_reportes"
                    >
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="25dp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:paddingLeft="@dimen/layout_margin5dp"
                android:paddingRight="@dimen/layout_margin5dp">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Curso:"
                    android:layout_marginRight="@dimen/layout_margin5dp"/>
                <LinearLayout
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borde_spinner_reportes"
                    >
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="25dp"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="generar reporte"
                android:theme="@style/RaisedButtonDarkReportes"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:background="@drawable/borde_rojo"
            android:layout_weight="1">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/layout_margin5dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:paddingLeft="@dimen/layout_margin5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/conocimiento_titulo"
                        android:background="@color/reportes_primary"
                        android:textColor="@color/icons"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borde_cuadrado_rojo_fino">
                        <TextView
                            android:padding="@dimen/layout_margin5dp"
                            android:layout_width="0dp"
                            android:layout_weight="5"
                            android:layout_height="wrap_content"
                            android:text="@string/conocimiento_pregunta1"
                            android:background="@drawable/rojo_fino_relleno"/>
                        <TextView
                            android:textAlignment="center"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:text="15"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borde_cuadrado_rojo_fino">
                        <TextView
                            android:padding="@dimen/layout_margin5dp"
                            android:layout_width="0dp"
                            android:layout_weight="5"
                            android:layout_height="wrap_content"
                            android:text="@string/conocimiento_pregunta2"
                            android:background="@drawable/rojo_fino_relleno"/>
                        <TextView
                            android:textAlignment="center"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:text="15"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borde_cuadrado_rojo_fino">
                        <TextView
                            android:padding="@dimen/layout_margin5dp"
                            android:layout_width="0dp"
                            android:layout_weight="5"
                            android:layout_height="wrap_content"
                            android:text="@string/conocimiento_pregunta3"
                            android:background="@drawable/rojo_fino_relleno"/>
                        <TextView
                            android:textAlignment="center"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:text="15"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borde_cuadrado_rojo_fino">
                        <TextView
                            android:padding="@dimen/layout_margin5dp"
                            android:layout_width="0dp"
                            android:layout_weight="5"
                            android:layout_height="wrap_content"
                            android:text="@string/conocimiento_pregunta4"
                            android:background="@drawable/rojo_fino_relleno"/>
                        <TextView
                            android:textAlignment="center"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:text="15"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <TextView
                        android:paddingLeft="@dimen/layout_margin5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/asistencia_titulo"
                        android:background="@color/reportes_primary"
                        android:textColor="@color/icons"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borde_cuadrado_rojo_fino">
                        <TextView
                            android:padding="@dimen/layout_margin5dp"
                            android:layout_width="0dp"
                            android:layout_weight="5"
                            android:layout_height="wrap_content"
                            android:text="@string/asistencia_pregunta1"
                            android:background="@drawable/rojo_fino_relleno"/>
                        <TextView
                            android:textAlignment="center"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:text="15"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borde_cuadrado_rojo_fino">
                        <TextView
                            android:padding="@dimen/layout_margin5dp"
                            android:layout_width="0dp"
                            android:layout_weight="5"
                            android:layout_height="wrap_content"
                            android:text="@string/asistencia_pregunta2"
                            android:background="@drawable/rojo_fino_relleno"/>
                        <TextView
                            android:textAlignment="center"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:text="15"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <TextView
                        android:paddingLeft="@dimen/layout_margin5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/etica_titulo"
                        android:background="@color/reportes_primary"
                        android:textColor="@color/icons"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borde_cuadrado_rojo_fino">
                        <TextView
                            android:padding="@dimen/layout_margin5dp"
                            android:layout_width="0dp"
                            android:layout_weight="5"
                            android:layout_height="wrap_content"
                            android:text="@string/etica_pregunta1"
                            android:background="@drawable/rojo_fino_relleno"/>
                        <TextView
                            android:textAlignment="center"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:text="15"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <TextView
                        android:paddingLeft="@dimen/layout_margin5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/capacidad_titulo"
                        android:background="@color/reportes_primary"
                        android:textColor="@color/icons"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borde_cuadrado_rojo_fino">
                        <TextView
                            android:padding="@dimen/layout_margin5dp"
                            android:layout_width="0dp"
                            android:layout_weight="5"
                            android:layout_height="wrap_content"
                            android:text="@string/capacidad_pregunta1"
                            android:background="@drawable/rojo_fino_relleno"/>
                        <TextView
                            android:textAlignment="center"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:text="15"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borde_cuadrado_rojo_fino">
                        <TextView
                            android:padding="@dimen/layout_margin5dp"
                            android:layout_width="0dp"
                            android:layout_weight="5"
                            android:layout_height="wrap_content"
                            android:text="@string/capacidad_pregunta2"
                            android:background="@drawable/rojo_fino_relleno"/>
                        <TextView
                            android:textAlignment="center"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:text="15"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borde_cuadrado_rojo_fino">
                        <TextView
                            android:padding="@dimen/layout_margin5dp"
                            android:layout_width="0dp"
                            android:layout_weight="5"
                            android:layout_height="wrap_content"
                            android:text="@string/capacidad_pregunta3"
                            android:background="@drawable/rojo_fino_relleno"/>
                        <TextView
                            android:textAlignment="center"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:text="15"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <TextView
                        android:paddingLeft="@dimen/layout_margin5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cumplimiento_titulo"
                        android:background="@color/reportes_primary"
                        android:textColor="@color/icons"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borde_cuadrado_rojo_fino">
                        <TextView
                            android:padding="@dimen/layout_margin5dp"
                            android:layout_width="0dp"
                            android:layout_weight="5"
                            android:layout_height="wrap_content"
                            android:text="@string/cumplimiento_pregunta1"
                            android:background="@drawable/rojo_fino_relleno"/>
                        <TextView
                            android:textAlignment="center"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:text="15"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
